# spec-kit-firstExample

./: .eslintrc.json  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.js  vitest.config.js
.husky/: pre-commit
.specify/memory/: constitution.md
specs/001-photo-album-organizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-photo-album-organizer/checklists/: requirements.md
specs/001-photo-album-organizer/contracts/: tauri-commands.md
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  main.rs  models.rs  photos.rs  validation.rs
src/components/: AlbumCard.js  AlbumGrid.js  PhotoModal.js  PhotoTile.js
src/services/: albumService.js  dbService.js  photoService.js
src/styles/: albums.css  main.css  photos.css
src/utils/: dateFormatter.js
tests/contract/: albums.test.js  database.test.js  files.test.js  photos.test.js  validation.test.js
tests/integration/: albums.test.js
tests/performance/: db-queries.test.js  index-verification.test.js
tests/unit/commands/: albums.test.js  photos.test.js  thumbnails.test.js
tests/unit/components/: AlbumCard.test.js  AlbumGrid.test.js  PhotoModal.test.js  PhotoTile.test.js
tests/unit/services/: albumService.test.js  photoService.test.js
